<resources>
    <string name="hint">Hint</string>
    <string name="submit">Submit</string>
    <string name="junk">Junk</string>
    <string name="record_id_text">Record ID: %d</string>
    <string name="junk_message">Is this image JUNK?</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="undo">Undo</string>
    <string name="help">Help</string>
    <string name="template">Template</string>
    <string name="alert">Alert!</string>
    <string name="ok">OK</string>
    <string name="no_more_records">There are no more records to process for this work currently. Please start another work.</string>
    <string name="crop_image_first">Crop something before submitting the record.</string>
    <string name="not_a_proper_polygon">Please draw a proper polygon.</string>
    <string name="please_wait">Please wait …</string>
    <string name="submitting_records">Please wait, submitting your answers…</string>
    <string name="try_again">Try Again</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="select">Select</string>
    <string name="prev">Prev</string>
    <string name="please_select_template_first">Please classify first…</string>
    <string name="edit">Edit</string>
    <string name="line">Line</string>
    <string name="draw_line_first">Draw lines before submitting…</string>
    <string name="next_line">New Line</string>
    <string name="sandbox_intro">This is your Sandbox. Feel free to experiment, your work and mistakes here will not be counted.</string>
    <string name="sandbox_success">You have successfully cleared the Sandbox. Now you can start work.</string>
    <string name="congratulations">Congratulations</string>
    <string name="sandbox_failure">You were not able to clear the sandbox. You can attempt the sandbox again.</string>
    <string name="failed_to_submit_record">Failed in submitting annotations, please try again…</string>
    <string name="please_try_again">It is wrong! Try again!</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="missing">Missing</string>
    <string name="your_answer">Your Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="these_records_are_junk">All records are junk?</string>
    <string name="select_a_category">Select A Category</string>
    <string name="confirm">Confirm</string>
    <string name="labeled_text">ABC</string>
    <string name="set_all_label_first">Please set all Cropping labels first…</string>
    <string name="set_all_tags_first">Please set all Cropping tags first…</string>
    <string name="recognitionError">Speech Recognition Stopped.</string>
    <string name="speak_now">Speak now</string>
    <string name="tap_to_speak">Tap to speak</string>
    <string name="classify">Classify</string>
    <string name="recording_audio_permission_is_denied">Recording audio permisssion is denied.</string>

    <string name="remove_all_annotation_from_frame">Remove all annotations from this video frame.</string>
    <string name="remove_all">Remove All</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="please_annotate_video_frames">Please annotate some video frames first.</string>
    <string name="preview_not_available">Preview not available yet.</string>
    <string name="mark_video_as_junk">Mark this video as junk</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="submit_video">Submit Video</string>
    <string name="approve_video">Approve Video</string>
    <string name="reject_video">Reject Video</string>
    <string name="please_watch_complete_video">Please watch complete video.</string>
    <string name="no_annotated_video_frame_found">No annotated video frame found.</string>
    <string name="sandboxResults">SandBox Results</string>
    <string name="retry">Retry</string>
    <string name="exit_child_annotation">Do you want exit annotating for this parent ?</string>
    <string name="child_annotation">Child Annotation</string>
    <string name="junk_video">Junk Video</string>
    <string name="step_id_text">Step : %d</string>
    <string name="video_url_not_found">Video url not found... Contact System administration.</string>
    <string name="sniffing">Sniffing</string>
    <string name="please_wait_extrating_frames">Please wait... processing video</string>
    <string name="downloading_video_message">Please wait, downloading video...</string>
    <string name="incorrect_records">Incorrect Records</string>
    <string name="selected_tags">Selected Tags</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="correct_annotations">Correct Annotations</string>
    <string name="your_annotations">Your Annotations</string>
    <string name="downloading_failed_video_message">We\'re not able to download the record (%d) video right now. Please try for the next record</string>
    <string name="extraction_failed_video_message">We\'re not able to extract the frames for the record (%d) video right now. Please try for the next record</string>
    <string name="enter_label">Please enter new label</string>
    <string name="enter_valid_label">Please enter a valid label</string>
    <string name="label_already_exists">%1$s is already added in the list</string>
    <string name="add_new_label_text">Do you really want to add %1$s brand?</string>
    <string name="reload">Reload</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="manager">manager</string>
    <string name="account_locked">Your %1$s account has been locked due to incorrect records submission.</string>
    <string name="sandbox_enabled">Your sandbox is enabled due to incorrect records submission.</string>
    <string name="warning">WARNING</string>
    <string name="incorrect_sniffing_warning">Please pay attention to your work since you\'re working incorrectly. We\'re suspending you for the next thirty seconds.</string>
    <string name="choose_class_first">Choose one of the classes to annotate violations.</string>
    <string name="confirm_annotations">Are you sure you have marked all the %1$s from this image?</string>
    <string name="boxes"> %d Boxes</string>
    <string name="select_an_object">Select An Object</string>
    <string name="add_new">Add New</string>
    <string name="interpolate">Interpolate</string>
    <string name="interpolation">Interpolation</string>
    <string name="preview">Preview</string>
    <string name="interpolation_criteria_msg">Please mark minimum two boxes in order to perform interpolation</string>
    <string name="no_interpolation_sandbox_msg">There is nothing to track in this record, please mark this video as Junk</string>
    <string name="interpolation_sandbox_msg">There %1$s in this record to track, please track them linearly in order to clear your sandbox.</string>
    <string name="one_object">is only 1 object</string>
    <string name="multiple_object">are %d objects</string>
    <string name="interpolation_first_sandbox_msg">We\'re tracking first object for now.</string>
    <string name="interpolation_next_sandbox_msg">We\'re tracking next object now.</string>
    <string name="walkthrough_interpolation">Click here to update the boxes which are not aligned with the object.</string>
    <string name="continue_txt">Continue</string>
    <string name="discard_changes_txt">Discard Changes</string>
    <string name="no_records">No records found</string>
    <string name="sandbox_records">Sandbox Records</string>
    <string name="sandbox_submitted_successfully">Sandbox submitted successfully</string>
    <string name="draw_crop_first">Draw a crop in order to classify</string>
    <string name="search_by_record_id">Search By Record ID</string>
    <string name="no_learning_video_found">No learning video found for %1$s application mode</string>
    <string name="ai_assist_enabled">AI Assist</string>
    <string name="record_info">Record Info</string>
    <string name="video_id">Video ID:</string>
    <string name="recorded_by">Recorded By:</string>
    <string name="video_source_id">Video Source Id:</string>
    <string name="date_of_recording">Date of Recording:</string>
    <string name="judgement_priority">Judgement Priority:</string>
    <string name="annotation_priority">Annotation Priority:</string>
    <string name="review_priority">Review Priority:</string>
    <string name="surge_meta_tag">Surge MetaTag:</string>
    <string name="city_priority">City Priority:</string>
</resources>