<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/alert"
            android:textAllCaps="true"
            android:textColor="@color/text_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:drawablePadding="@dimen/margin_10"
            android:gravity="center_horizontal"
            android:text="@string/junk_message"
            android:textColor="@color/text_dark"
            android:textSize="18sp"
            app:drawableTopCompat="@drawable/ic_junk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="#4CAF50"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toStartOf="@+id/junkBtn"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTxt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/junkBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/junk"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="#D34A4A"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noBtn"
            app:layout_constraintTop_toBottomOf="@+id/messageTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>