<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/judgementIconIv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_30"
        android:visibility="visible"
        tools:background="@drawable/bg_congratulation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textAllCaps="true"
        android:textColor="@color/text_dark"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/judgementMessageTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/correct_answer"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        tools:text="Sample question text goes here?" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20"
        android:minWidth="@dimen/margin_80"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/green"
        app:cornerRadius="@dimen/margin_15" />
</LinearLayout>