<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomButtonsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_buttons"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="14dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/undoBtnContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/undoIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            app:srcCompat="@drawable/ic_undo_record"
            app:tint="@color/button_icon_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:textColor="@color/button_icon_selector"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/helpBtnContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/infoIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            app:srcCompat="@drawable/ic_circle_info"
            app:tint="@color/button_icon_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/button_icon_selector"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sniffingBtnContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/hintIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            app:srcCompat="@drawable/ic_hint"
            app:tint="@color/button_icon_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sniffing"
            android:textColor="@color/button_icon_selector"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="52dp"
        android:layout_height="52dp" />

    <LinearLayout
        android:id="@+id/junkBtnContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/junkIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            app:srcCompat="@drawable/ic_junk"
            app:tint="@color/button_icon_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/junk"
            android:textColor="@color/button_icon_selector"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/submitBtnContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/submitIv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            app:srcCompat="@drawable/ic_arrow_forward"
            app:tint="@color/button_icon_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/button_icon_selector"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>