<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_20">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/alert"
            android:textAllCaps="true"
            android:textColor="@color/text_dark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:textColor="@color/text_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt"
            tools:text="Sample question text goes here?" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negativeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_10"
            android:backgroundTint="#D34A4A"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="@dimen/margin_20"
            app:layout_constraintEnd_toStartOf="@+id/positiveBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTxt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_10"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="@dimen/margin_20"
            app:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/negativeBtn"
            app:layout_constraintTop_toBottomOf="@+id/messageTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
