<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/multiTagsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2000000"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineMid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".50" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRightSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".70" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tagsContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guidelineMid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.github.chrisbanes.photoview.PhotoView
                    android:id="@+id/extractedBitmapView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_225"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="#333333" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/selectedTagsTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/selected_tags"
                    android:textAllCaps="true"
                    android:textColor="#ACACAC"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/extractedBitmapView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selectedTagsLv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selectedTagsTitleTxt"
                    tools:listitem="@layout/layout_tag_selected" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:background="@drawable/bg_back_btn"
                    android:minWidth="@dimen/margin_120"
                    android:text="@string/back"
                    android:textColor="@color/text_dark"
                    app:layout_constraintEnd_toStartOf="@+id/submitTagsBtn"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selectedTagsLv" />

                <Button
                    android:id="@+id/submitTagsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:background="@drawable/bg_submit_btn"
                    android:minWidth="@dimen/margin_120"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    app:layout_constraintTop_toBottomOf="@+id/selectedTagsLv" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/superButtonsView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRightSide"
                app:layout_constraintStart_toEndOf="@+id/guidelineMid"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/super_button_item" />

            <LinearLayout
                android:id="@+id/extraTagsListContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineRightSide"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/tagsFilterEt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_template_search"
                        android:drawablePadding="5dp"
                        android:drawableTint="#80ffffff"
                        android:hint="@string/search"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="#ffffff"
                        android:textColorHint="#80ffffff"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/clearTagsFilterIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/cancel"
                        android:padding="8dp"
                        app:srcCompat="@drawable/ic_close"
                        app:tint="#80ffffff" />
                </LinearLayout>

                <co.nayan.canvas.views.NonScrollExpandableListView
                    android:id="@+id/tagsElv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0dp"
                    tools:listitem="@layout/layout_tag" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>